# ADXL355_AzureIoT

./: .gitmodules  CMakeLists.txt  ConfigSettings.cpp  ConfigSettings.h  README.ms  main.cpp  sample_config.json
